<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expandedHintEnabled="false"
        android:layout_marginTop="10dp"
        android:hint="Title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notifTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expandedHintEnabled="false"
        android:layout_marginTop="10dp"
        android:hint="Message Body"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notifBodyEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:maxLines="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/listTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/optionWaitList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Waitlist"
            android:checked="true"
            android:textSize="12sp"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/optionInviteeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Invitees"
            android:textSize="12sp"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/optionAttendeeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Attending"
            android:textSize="12sp"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/optionCancelledList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancelled"
            android:textSize="12sp"/>
    </RadioGroup>

</LinearLayout>
