<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/organizerProfileLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    >
    <LinearLayout
...
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="2.5dp"
            android:gravity="center_vertical"
            >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/facilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Facility Name"
                android:textSize="24sp"
                />
            <android.widget.Space
...
